Added ebs_pure and started work on fetch_pure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(fetch_cran)
 export(fetch_doi)
 export(fetch_orcid)
+export(fetch_pure)
 export(fetch_scholar)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
