Added journal_ranking function from rcademy package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fetch_doi)
 export(fetch_orcid)
 export(fetch_pure)
 export(fetch_scholar)
+export(journal_ranking)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(stringr,str_detect)
